--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,10 +6,13 @@ export(geom_symbol)
 export(scale_symbol)
 export(scale_symbol_continuous)
 export(scale_symbol_discrete)
+export(scale_symbol_identity)
 export(scale_symbol_manual)
 export(scale_symbol_ordinal)
 importFrom(ggplot2,Geom)
+importFrom(ggplot2,ScaleContinuousIdentity)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,continuous_scale)
 importFrom(ggplot2,discrete_scale)
 importFrom(ggplot2,ggproto)
 importFrom(ggplot2,layer)
