--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,16 @@
 Package: ggsymbol
-Title: Symbol Layer based on `ggplot2` and `ggstar` 
-Version: 0.0.0.9000
+Title: Symbol Layer Based on "ggplot2" and "ggstar" 
+Version: 0.0.1.0
 Authors@R: 
     person(given = "Shuangbin",
            family = "Xu",
            role = c("aut", "cre"),
            email = "xshuangbin@163.com",
            comment = c(ORCID = "0000-0003-3513-5362"))
-Description: The points layer was provided, integrated the shapes of `geom_point` in `ggplot2`
-    and some `starshapes` of `geom_star` in `ggstar`.
+Description: The points layer was provided, integrated the shapes of "geom_point" in "ggplot2"
+    and some "starshapes" of "geom_star" in "ggstar".
+Depends:
+  R (>= 3.5)
 Imports:
   ggplot2,
   grid,
