--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ importFrom(ggplot2,continuous_scale)
 importFrom(ggplot2,discrete_scale)
 importFrom(ggplot2,ggproto)
 importFrom(ggplot2,layer)
+importFrom(ggstar,GeomStar)
 importFrom(grid,gTree)
 importFrom(grid,gpar)
 importFrom(grid,grid.draw)
